# dotfiles

./: .chezmoi.yaml.tmpl  .chezmoidata.yaml  .chezmoiignore  .gitignore  .install-password-manager.sh  README.md  dot_Brewfile.tmpl  dot_amethyst.yml  dot_antigenrc  dot_bashrc.tmpl  dot_p10k.rtx.zsh  dot_p10k.zsh  dot_tmux.conf  empty_dot_Brewfile.tmpl  key.txt.age  modify_mise_global  private_readonly_dot_gitconfig.tmpl  readonly_dot_gitconfig.tmpl  readonly_dot_zshrc  readonly_dot_zshrc.tmpl  run_once_before_bootstrap-yay.sh.tmpl  run_once_before_clone-kitty-themes.sh  run_once_before_vim-plug.sh  run_once_before_vundle-install.sh  run_once_ghostty_shaders.sh  run_once_ghostty_shaders.sh.tmpl  run_once_homemanager_setup.sh.tmpl  run_onchange_before_decrypt-private-key.sh.tmpl  run_onchange_ghostty_themes.sh  run_onchange_install-packages.sh.tmpl  run_onchange_intall-tpm.sh.tmpl  symlink_dot_zshrc
dot_claude/: CLAUDE.md  executable_statusline-command.sh
dot_claude/agents/: adr-review.md  code-implementer.md  code-reviewer.md  readiness-auditor.md  security-researcher.md
dot_claude/commands/: bootstrap-greenfield.md  retrofit.md
dot_claude/skills/python-project/assets/: pyproject.toml
dot_config/aerospace/: aerospace.toml  empty_aerospace.toml
dot_config/ghostty/: config  config.tmpl
dot_config/git/: empty_allowed_signers.tmpl
dot_config/home-manager/: home.nix.tmpl
dot_kube/: config.tmpl  rasputin.tmpl
dot_ssh/: config  encrypted_config.age  id_ed25519.tmpl  key.pub.tmpl  private_id_ed25519.tmpl
dot_zsh.d/: git.sh  github.sh  notes.sh  pwsh.sh
(+90 files in other folders)
