[project]
name = "CHANGEME"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W", "F", "B", "SIM", "C4", "UP", "I", "ANN", "RUF",
    "N", "S", "A", "DTZ", "ICN", "PIE", "PT", "RSE", "RET",
    "TCH", "ARG", "PTH", "ERA", "PL", "PERF", "FURB",
]
ignore = [
    "ANN101", "ANN102", "S101", "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
